@@ -6,4 +6,5 @@ Makefile.in
 sabayon
 sabayon-monitor
 sabayon-session
-profilesdialog
+sabayon.console
+sabayon.desktop
