@@ -1,5 +1,11 @@
 2005-02-14  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/monitorwindow.py,
+	  lib/sources/mozillasource.py,
+	  lib/sources/paneldelegate.py: hook up debugging.
+
+2005-02-14  Mark McLoughlin  <markmc@redhat.com>
+
 	* lib/util.py: (debug_print): add "admin-tool" key.
 
 	* admin-tool/profilesdialog.py: hook up debugging.
